# surf5-alarm4deaf

./: .gitignore  README.md  secret.h
src-coral/: CMakeLists.txt  main_cm7.cc
src-coral/src/app/: AppContext.h  AppEvent.h  NpuConst.h
src-coral/src/app/ml/: AlarmInterpreter.cpp  AlarmInterpreter.h  AudioBridge.cpp  AudioBridge.h  InferenceFactory.cpp  InferenceFactory.h  Interpreter.h
src-coral/src/app/peripheral/i2c/: I2cCommand.h  I2cResponse.h  I2cSlave.h
src-coral/src/app/rpc/: RpcServer.cpp  RpcServer.h  StringUtil.h
src-coral/src/app/thread/: QueueMain.cpp  QueueMain.h  QueueMainM7.cpp  QueueMainM7.h  ThreadInference.cpp  ThreadInference.h
src-coral/src/base/ipc/: IpcCoreM7.h
src-coral/src/base/util/: FsUtil.h
src-coral/src/lib/arduprof/: ArduProf.h  LibDef.h  LibLog.h
src-coral/src/lib/arduprof/src/os/freertos/: MessageBus.h  MessageQueue.h
src-coral/src/lib/arduprof/src/os/freertos/peripheral/: PeriodicTimer.h  SoftwareTimer.h
src-coral/src/lib/arduprof/src/os/freertos/thread/: ThreadBase.h
src-coral/src/lib/arduprof/src/type/: Message.h
src-surf5/: CMakeLists.txt  README-W7500x-Surf5.md  README.md  getting_started.md  secret.h
src-surf5/Libraries/: CMakeLists.txt
src-surf5/Libraries/CMSIS/Device/WIZnet/W7500/Include/: w7500x.h
src-surf5/Libraries/CMSIS/Device/WIZnet/W7500/Source/GCC/: startup_W7500.s
src-surf5/Libraries/ioLibrary/: CMakeLists.txt
src-surf5/Libraries/ioLibrary/Internet/: CMakeLists.txt
src-surf5/Libraries/ioLibrary/Internet/SNTP/: sntp.c  sntp.h
src-surf5/Projects/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/ADC/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/ADC/ADC_Interrupt/: CMakeLists.txt  main.c  main.h  w7500x_it.c
src-surf5/Projects/W7500x_StdPeriph_Examples/ADC/ADC_Polling/: CMakeLists.txt  main.c
src-surf5/Projects/W7500x_StdPeriph_Examples/DualTimer/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/DualTimer/DualTimer_BasicExample/: CMakeLists.txt  main.c  w7500x_it.c
src-surf5/Projects/W7500x_StdPeriph_Examples/EXTI/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/EXTI/EXTI_BasicExample/: CMakeLists.txt  main.c  w7500x_it.c
src-surf5/Projects/W7500x_StdPeriph_Examples/Flash/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/Flash/Flash_IAP/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/GPIO/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/GPIO/GPIO_IOToggle/: CMakeLists.txt  main.c  w7500x_conf.h
src-surf5/Projects/W7500x_StdPeriph_Examples/GPIO/GPIO_Interrupt/: CMakeLists.txt  main.c  main.h
src-surf5/Projects/W7500x_StdPeriph_Examples/PWM/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/PWM/PWM_CaptureMode/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/PWM/PWM_CounterMode/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/PWM/PWM_DeadZoneGeneration/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/PWM/PWM_PWMOutput/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/RNG/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/RNG/RNG_BasicExample/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/SysTick/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/SysTick/SysTick_BasicExample/: CMakeLists.txt  main.c
src-surf5/Projects/W7500x_StdPeriph_Examples/UART/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/UART/UART_HardwareFlowControl/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/UART/UART_Interrupt/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/UART/UART_Polling/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/UART/UART_Printf/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WDT/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WDT/WDT_Reset/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WZTOE/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WZTOE/WZTOE_DHCPClient/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WZTOE/WZTOE_DNSClient/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WZTOE/WZTOE_Loopback/: CMakeLists.txt  main.c
src-surf5/Projects/W7500x_StdPeriph_Examples/WZTOE/WZTOE_UDPMulticasting/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WZTOE/WZTOE_WebClient/: CMakeLists.txt
src-surf5/Projects/W7500x_StdPeriph_Examples/WZTOE/WZTOE_WebServer/: CMakeLists.txt  main.c
src-surf5/src/: AppLog.h  CMakeLists.txt  main.c  main.h  net_util.c  net_util.h  pins.h  soft_i2c.c  soft_i2c.h  ssd1306.c  ssd1306.h  w7500x_it.c
src-surf5/src/task/: task_messaging.c  task_messaging.h  task_npu.c  task_npu.h
src-surf5/tools/: arm-none-eabi-gcc.cmake
